packages/svelte/tests/validator/samples/export-let-unused-svelte-component/input.svelte
<script>
	export let Component;
</script>

<svelte:component this={Component} />