packages/svelte/tests/compiler-errors/samples/runes-prop-export-conflict/main.svelte
<script>
	let { x: y } = $props();
	export function x() {}
</script>
